--- a/src/loscon24.css
+++ b/src/loscon24.css
@@ -2,6 +2,11 @@ h1 {
     color: #e1b43a;
   }
 
+.caption-text {
+    color: #e1b43a;
+  }
+
+
 .wy-side-nav-search {
     background-color: black;
   }
